Lexing/test_cases/bad/back-eof-no-string.cl
(* backslash at EOF outside string *)

foo\
